# magisterka

./: README.md  add_ifn_ba_b04_5.txt  add_ifn_er_b04_4.txt  add_ifn_er_b04_5.txt  data.txt  data_parallel.txt  gnenerator3.py  heatmaps.py  inf_num_plot.py  inf_num_plot_real.py  log_plot.py  meta_params.txt  new_data.txt  next_plot.py  params.txt  params_gen.py  plot3d.py  pyproject.toml  script.ps1
params_dir/: pv1_ifn_b04_ba_1.txt  pv1_ifn_b04_ba_10.txt  pv1_ifn_b04_ba_2.txt  pv1_ifn_b04_ba_20.txt  pv1_ifn_b04_ba_3.txt  pv1_ifn_b04_ba_4.txt  pv1_ifn_b04_ba_5.txt  pv1_ifn_b04_ba_8.txt  pv1_ifn_b04_email_1.txt  pv1_ifn_b04_email_3.txt  pv1_ifn_b04_email_4.txt  pv1_ifn_b04_email_5.txt  pv1_ifn_b04_er_1.txt  pv1_ifn_b04_er_10.txt  pv1_ifn_b04_er_2.txt  pv1_ifn_b04_er_20.txt  pv1_ifn_b04_er_3.txt  pv1_ifn_b04_er_4.txt  pv1_ifn_b04_er_8.txt  pv1_ifn_b04_infectious_1.txt  pv1_ifn_b04_infectious_3.txt  pv1_ifn_b04_infectious_4.txt  pv1_ifn_b04_infectious_5.txt  pv1_ifn_b04_ucirving_1.txt  pv1_ifn_b04_ucirving_3.txt  pv1_ifn_b04_ucirving_4.txt  pv1_ifn_b04_ucirving_5.txt  pv1_ifn_b07_ba_1.txt  pv1_ifn_b07_ba_10.txt  pv1_ifn_b07_ba_2.txt  pv1_ifn_b07_ba_20.txt  pv1_ifn_b07_ba_3.txt  pv1_ifn_b07_ba_4.txt  pv1_ifn_b07_ba_5.txt  pv1_ifn_b07_ba_8.txt  pv1_ifn_b07_email_1.txt  pv1_ifn_b07_email_2.txt  pv1_ifn_b07_email_3.txt  pv1_ifn_b07_email_4.txt  pv1_ifn_b07_email_5.txt  (+282 more)
params_dir_new/: pv1_bm04_bn03_ba.txt  pv1_bm04_bn03_email.txt  pv1_bm04_bn03_er.txt  pv1_bm04_bn03_infectious.txt  pv1_bm04_bn03_ucirving.txt  pv1_bm04_bn05_ba.txt  pv1_bm04_bn05_email.txt  pv1_bm04_bn05_er.txt  (+120 more)
(+623 files in other folders)
